--- a/app/views/pages_new/_borse_di_studio.haml
+++ b/app/views/pages_new/_borse_di_studio.haml
@@ -18,7 +18,7 @@
     .line
       .col3.line-tablet
       .col4.line-tablet
-        %a.line.center-content.btn.btn-medium.color-white.bg-primary
+        %a.line.center-content.btn.btn-medium.color-white.bg-primary{:href => "/pages/borse_di_studio"}
           .separator3
           %h4
             INVIA CANDIDATURA
