--- a/app/views/pages_new/_corsi.haml
+++ b/app/views/pages_new/_corsi.haml
@@ -1,4 +1,6 @@
-.line.bg-muted#corsi
+
+.line.bg-muted
+  .separator50#corsi
   .line-compress.line-max
     .separator50
     %h1.line.color-muted.center-content.article-title.font-custom
