--- a/app/views/pages_new/_gallery.haml
+++ b/app/views/pages_new/_gallery.haml
@@ -1,5 +1,6 @@
 / GALLERY
-.line.bg-muted#gallery
+.line.bg-muted
+  .separator50#gallery
   .line-compress.line-max
     .separator50
     %h1.line.color-muted.center-content.article-title.font-custom
