--- a/app/views/pages_new/_contatti.haml
+++ b/app/views/pages_new/_contatti.haml
@@ -1,5 +1,5 @@
-
-.line.bg-white#contatti
+.separator50#contatti
+.line.bg-white
   .line-compress.line-max
     .separator50
     %h1.line.center-content.article-title.font-custom
