--- a/app/views/pages_new/l_accademia.haml
+++ b/app/views/pages_new/l_accademia.haml
@@ -1,5 +1,6 @@
 .bg-white
 .line.bg-white
+  .separator50
   .line-compress.line-max
     .separator50
     %h1.line.center-content.article-title.font-custom
