--- a/public/stylesheets/main_responsive.css
+++ b/public/stylesheets/main_responsive.css
@@ -149,21 +149,23 @@ color:black;
 .header-menu a {
 font-weight: 500;
 font-size: 13px;
-padding: 7px 9px;
-margin-left: 1%;
+padding: 7px 2%;
+margin:0 auto;
 color: white; }
 .header-menu a:hover {
-background-color: rgba(0, 0, 0, 0.08); }
+background-color: #eee;
+ }
 .header.scrolling .header-menu a.active{
-  background-color: rgba(0, 0, 0, 0.15);
+  background-color: #D9D9D9;
   color:white;
-  font-weight: bold;
   text-shadow: 1px 1px rgba(0,0,0, .2), 1px 0 60px rgba(0,0,0, .2);
 }
 .header.scrolling .header-menu a,.header.scrolling .header-menu a.active,.header.scrolling .header-menu a:hover{
-  margin:0 auto;
+  margin:0 -5px 0 0;
+  overflow: hidden;
   font-size: 14px;
-  padding:50px 10px;
+  padding-top:45px;
+  padding-bottom:40px;
 }
 /*Backgrounds */
 .bg-primary {
