--- a/app/views/pages_new/l_accademia.haml
+++ b/app/views/pages_new/l_accademia.haml
@@ -11,7 +11,7 @@
     .line
       .line
         .col4.line-tablet
-          %img{:src=> "/images/accademia.jpg", :class => "col9 line-tablet"}
+          %img.img-media{:src=> "/images/accademia.jpg", :class => "col9 line-tablet"}
           .separator30
         .col6.line-tablet
           %p Dal 1956 l’Accademia d’Arte e Design Leonetto Cappiello è il luogo ideale per esprimere la propria creatività e per tradurla in una reale opportunità di lavoro. Ogni professione, anche la più creativa, non si può improvvisare.
@@ -19,8 +19,7 @@
           %p Con più di cinquant’anni di esperienza nell’insegnamento e nella formazione, e grazie al costante aggiornamento dei suoi corsi, l’Accademia Cappiello rappresenta un polo specializzato nel qualificare professionisti nei settori della grafica, della progettazione e decorazione d’interni, della pubblicità e dell’illustrazione editoriale.
           %p Docenti qualificati, che dividono il loro tempo tra la professione e l’insegnamento, portano in aula le loro esperienze rappresentano la migliore garanzia di un reale confronto con il mondo del lavoro.
           %p Una didattica esclusiva, improntata sulla cultura del progetto, che esercita pensiero e creatività e insegna a finalizzare le idee attraverso gli strumenti e i software più aggiornati utilizzati dai professionisti del settore.
-          .separator30
-      .separator30
+      .separator100
   = render partial: "pages_new/corsi"
   .separator30
   = render partial: "pages_new/borse_di_studio"
