--- a/public/stylesheets/main_responsive.css
+++ b/public/stylesheets/main_responsive.css
@@ -126,7 +126,7 @@ cursor: pointer;
 }
 .header.scrolling{
   box-shadow:0 2px 10px rgba(0,0,0, .1);
-z-index:9999999;
+z-index:999;
 min-width:100%;
 float: none;
 margin:0 auto;
@@ -150,14 +150,9 @@ padding: 7px 2%;
 margin:0 auto;
 color: white; }
 .header-menu a:hover {
-background-color: rgba(0,0,0, .15);
+  background-color: rgba(0,0,0, .15);
  }
-.header.scrolling .header-menu a.active{
-  background-color: #D9D9D9;
-  color:white;
-  text-shadow: 1px 1px rgba(0,0,0, .2), 1px 0 60px rgba(0,0,0, .2);
-}
-.header.scrolling .header-menu a:hover{
+.header.scrolling .header-menu a:hover,.header.scrolling .header-menu a.active{
   background-color: #eee;
 }
 .header.scrolling .header-menu a,.header.scrolling .header-menu a.active,.header.scrolling .header-menu a:hover{
@@ -195,7 +190,6 @@ margin: 0 auto; }
 .line-footer{
   max-width: 1000px;
 }
-
 .widget {
 width: 31.33%;
 margin: 0 1%;
@@ -203,14 +197,26 @@ float: left;
 box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2); }
 .widget:hover {
 box-shadow: 0 0px 4px rgba(0, 0, 0, 0.2); }
-
+.img-media{
+  max-width: 96%;
+  padding:2%;
+  background: white;
+  box-shadow:0 1px 4px rgba(0,0,0, .2);
+}
 /*IDs */
 #menuMobile {
+  z-index:999999;
 background: rgba(0, 0, 0, 0.85); }
 #menuMobile a {
-line-height: 30px; }
-
+line-height: 30px;
+font-size: 14.5px;
+}
+#menuMobile a.active{
+  font-style:italic;
+  background: black;
+}
 #btnMenu {
+  z-index:99999999;
 transition-duration: 0.2s;
 line-height: 43px;
 width: 40px;
