--- a/app/views/layouts/responsive.html.haml
+++ b/app/views/layouts/responsive.html.haml
@@ -164,23 +164,23 @@
         .separator30
         .separator10
         .col6.offset-left2.radius3
-          %a.btn.btn-small.bg-muted.color-white{:href => "/pag/l_accademia"} Accademia
+          %a.btn.btn-small.bg-muted.color-white{:href => "/"} Accademia
           .separator10
-          %a#link-mobile-corsi.btn.btn-small.bg-muted.color-white{:href => "#corsi"} Corsi
+          %a#link-mobile-corsi.btn.btn-small.bg-muted.color-white{:href => "/#corsi"} Corsi
           .separator10
           - nav_link :news
           .separator10
-          %a#link-mobile-gallery.btn.btn-small.bg-muted.color-white{:href => "#gallery"} Gallery
+          %a#link-mobile-gallery.btn.btn-small.bg-muted.color-white{:href => "/#gallery"} Gallery
           .separator10
-          %a#link-mobile-borse-di-studio.btn.btn-small.bg-muted.color-white{:href => "#borse_di_studio"} Borse di Studio
+          %a#link-mobile-borse-di-studio.btn.btn-small.bg-muted.color-white{:href => "/#borse_di_studio"} Borse di Studio
           .separator10
           %a.btn.btn-small.bg-muted.color-white Open Day
           .separator10
-          %a#link-mobile-contatti.btn.btn-small.bg-muted.color-white{:href => "#contatti"} Contatti
+          %a#link-mobile-contatti.btn.btn-small.bg-muted.color-white{:href => "/#contatti"} Contatti
           .separator15
           %a.btn.btn-small.color-white.bg-primary Area utenti
         .separator15
-        %a.color-white{:href => "#contatti"}
+        %a.color-white{:href => "/#contatti"}
           %i.fa.fa-phone
           Telefono
         &nbsp;&nbsp;
@@ -245,12 +245,12 @@
               .separator15
               .separator10
               - nav_link :l_accademia
-              %a#link-corsi{ href: "#corsi" } Corsi
+              %a#link-corsi{ href: "/#corsi" } Corsi
               - nav_link :news
-              %a#link-gallery{ href: "#gallery" } La Gallery
-              %a#link-borse-di-studio{ href: "#borse-di-studio" } Borse di studio
+              %a#link-gallery{ href: "/#gallery" } La Gallery
+              %a#link-borse-di-studio{ href: "/#borse-di-studio" } Borse di studio
               - nav_link :open_days
-              %a#link-contatti{ href: "#contatti" } Contatti
+              %a#link-contatti{ href: "/#contatti" } Contatti
               -# nav_link :contatti
           .separator100
           .separator50.desktop
