--- a/app/views/layouts/responsive.html.haml
+++ b/app/views/layouts/responsive.html.haml
@@ -305,7 +305,10 @@
           $('#top-menu').addClass('scrolling');
           }
         });
-        DynamicMenuBar();
+        if (!$('body').hasClass('not-home')) {
+
+          DynamicMenuBar();
+        }
       :javascript
         $("#video-home").on('click', function(e) {
         $.fancybox({
