--- a/app/views/layouts/responsive.html.haml
+++ b/app/views/layouts/responsive.html.haml
@@ -255,7 +255,7 @@
           .separator100
           .separator50.desktop
           .separator30
-          %a#video-home.line.center-content{:href=> "https://www.youtube.com/watch?v=_5BJ4VrkENw&autoplay=1"}
+          %a#video-home.line.center-content.no-scroll{:href=> "https://www.youtube.com/watch?v=_5BJ4VrkENw&autoplay=1"}
             %i.fa.fa-play-circle.play-home-video.color-white
           .separator100
           .separator30.desktop
