--- a/public/stylesheets/main_responsive.css
+++ b/public/stylesheets/main_responsive.css
@@ -53,7 +53,8 @@ h1, h2, h3, h4, strong, b {
 font-weight: 500; }
 a{
 color: #d32b59;
-transition: all 0.15s linear; }
+transition: all 0.15s linear;
+}
 
 small {
 font-size: 12px; }
@@ -103,6 +104,11 @@ bottom:30px;
 font-size:24px;
 }
 .play-home-video{
+  position: absolute;
+  left:0;
+  right:0;
+  top:42%;
+  z-index:0;
 font-size:100px;
 opacity:.6;
 }
@@ -148,7 +154,9 @@ font-weight: 500;
 font-size: 13px;
 padding: 7px 2%;
 margin:0 auto;
-color: white; }
+color: white;
+transition:none;
+}
 .header-menu a:hover {
   background-color: rgba(0,0,0, .15);
  }
