--- a/app/views/pages_new/_gallery.haml
+++ b/app/views/pages_new/_gallery.haml
@@ -8,31 +8,50 @@
     .separator30
     .separator15.pattern
     .separator30
-    .line.center-content
+    .line.center-content.f_menu
       .col5.line-tablet
-        %a.bg-white.no-radius.col5.color-black.toggle-opacity-inverse-hover
+        %a.bg-white.no-radius.col5.color-black.toggle-opacity-inverse-hover{ data: { set_id: "72157625778631893" } }
           .separator5
           Grafica Pubblicitaria
           .separator5
-        %a.bg-primary-2.color-white.no-radius.col5.toggle-opacity-inverse-hover
+        %a.bg-primary-2.color-white.no-radius.col5.toggle-opacity-inverse-hover{ data: { set_id: "72157625778629231" } }
           .separator5
           Interior Design
           .separator5
       .separator10.tablet.mobile
       .col5.line-tablet
-        %a.bg-primary-3.color-white.no-radius.col5.toggle-opacity-inverse-hover
+        %a.bg-primary-3.color-white.no-radius.col5.toggle-opacity-inverse-hover{ data: { set_id: "72157632584352033" } }
           .separator5
           Digital Communication
           .separator5
-        %a.bg-primary-4.color-white.no-radius.col5.toggle-opacity-inverse-hover
+        %a.bg-primary-4.color-white.no-radius.col5.toggle-opacity-inverse-hover{ data: { set_id: "72157625904044530" } }
           .separator5
           Eventi
           .separator5
     .separator30
-    .line.article
-      #photos{"data-set_id" => "72157631510132935"}
+    .f_gallery
+      .line.article
+        #photos{"data-set_id" => "72157625778631893"}
 
-      %a.flickr_button{:href => "http://www.flickr.com/photos/accademiacappiello/sets/72157659720037219/"}
+      -# %a.flickr_button{:href => "http://www.flickr.com/photos/accademiacappiello/sets/72157659720037219/"}
     .separator30
   .separator50
+  :coffee
+    clearPhotos = ->
+      $("#photos").html("")
+
+
+    $(".f_menu a").on "click", ->
+      clearPhotos()
+
+      # TODO: add loading
+      $("#photos").html("<div class='loading_antani' style='text-align:center'>Loading...</div>")
+
+      id = $(this).data "set_id"
+      $("#photos").data "set_id", id
+
+      gallery = new FlickrGallery()
+      gallery.init ->
+        clearPhotos()
+
 / GALLERY
