--- a/app/views/pages_new/_gallery.haml
+++ b/app/views/pages_new/_gallery.haml
@@ -45,7 +45,7 @@
       clearPhotos()
 
       # TODO: add loading
-      $("#photos").html("<div class='loading_antani' style='text-align:center'>Loading...</div>")
+      $("#photos").html("<div class='gallery_loading center-content'> Loading...</div>")
 
       id = $(this).data "set_id"
       $("#photos").data "set_id", id
