--- a/public/stylesheets/main_responsive.css
+++ b/public/stylesheets/main_responsive.css
@@ -203,8 +203,11 @@ margin: 0 1%;
 float: left;
 box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
 overflow: hidden;
-height:330px;
-max-height:330px;
+height:370px;
+max-height:370px;
+}
+.widget-pic{
+  height:200px;
 }
 .widget-desc{
   overflow:hidden;
