--- a/app/views/layouts/responsive.html.haml
+++ b/app/views/layouts/responsive.html.haml
@@ -183,7 +183,7 @@
         %a.color-white{:href => "/#contatti"}
           %i.fa.fa-phone
           Telefono
-        &nbsp;&nbsp;
+          &nbsp;&nbsp;
         %a.color-white{:href => "mailto:info@accademiacappiello.it"}
           %i.fa.fa-envelope-o
           Email
@@ -216,19 +216,17 @@
                 .separator5
                 %span
                   %ul.line.right-content
-
-                    %li.col4.right-content
-
-                    %li.col6.right-content
+                    %li.line.right-content
                       %a.bg-muted.color-white.radius20.toggle-opacity-inverse-hover{:href => "#"}
                         %small
                           &nbsp;&nbsp; AREA UTENTI &nbsp;&nbsp;
 
                       %a.color-white.toggle-opacity-inverse-hover{:href => "/pag/contatti"}
-                        &nbsp;
+                        &nbsp;&nbsp;&nbsp;&nbsp;
                         %i.fa.fa-phone.color-white
                           Telefono &nbsp;&nbsp;
                       %a.color-white.toggle-opacity-inverse-hover{:href => "mailto:info@accademiacappiello.it"}
+                        &nbsp;&nbsp;&nbsp;
                         %i.fa.fa-envelope.color-white
                         &nbsp;&nbsp;Email &nbsp;&nbsp;
             .separator3
