--- a/app/views/layouts/responsive.html.haml
+++ b/app/views/layouts/responsive.html.haml
@@ -96,10 +96,10 @@
     %meta{:charset => "utf-8"}/
     %meta{:content => "initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width", :name => "viewport"}/
     %link{:href => "/stylesheets/vendor/csshelper/csshelper.css", :rel => "stylesheet"}/
-    %link{:href=> "https://fonts.googleapis.com/css?family=Montserrat:400,700", :rel => "stylesheet"}
+    -# %link{:href=> "https://fonts.googleapis.com/css?family=Montserrat:400,700", :rel => "stylesheet"}
     %link{:href => "/stylesheets/vendor/font-awesome/font-awesome.min.css", :rel => "stylesheet"}/
     -# TODO UI salvare il font
-    %link{:href => "https://fonts.googleapis.com/css?family=Open+Sans:400,700italic,700,600italic,600,400italic,300italic,300&subset=latin,cyrillic-ext", :rel => "stylesheet", :type => "text/css"}/
+    -# %link{:href => "https://fonts.googleapis.com/css?family=Open+Sans:400,700italic,700,600italic,600,400italic,300italic,300&subset=latin,cyrillic-ext", :rel => "stylesheet", :type => "text/css"}/
     %link{:href => "/stylesheets/fancybox.css", :rel => "stylesheet"}/
     = stylesheet_link_tag "main_responsive"#, :cache =>  "cache/all"
     - unless Rails.env == "production"
