--- a/app/views/pages_new/_corsi.haml
+++ b/app/views/pages_new/_corsi.haml
@@ -69,7 +69,7 @@
           .line-compress
             .line-compress
               %h3
-                = corso[:title_url]
+                =# corso[:title_url] #debug
                 = corso[:name]
               .separator5
               .widget-desc
