--- a/app/views/pages_new/_footer.haml
+++ b/app/views/pages_new/_footer.haml
@@ -1,12 +1,11 @@
 / footer
-%footer.footer.bg-black.line-compress
+%footer.footer.bg-black
   .separator30
-  .line.line-footer
+  .line.line-footer.bg-black
     .col4.line-tablet.center-content-tablet
       %img{:src => "/images/logo-footer.png", :width => "200"}
     .col5.line-tablet.right-content.center-content-tablet
       .separator15
-      .separator5
       .separator15.tablet.mobile
       %a.toggle-opacity-hover.color-muted-inverse{:href => "https://www.facebook.com/accademiaartedesigncappiello", :target => "_blank"}
         %i.fa.fa-2x.fa-facebook-official &nbsp;&nbsp;
@@ -20,61 +19,63 @@
         %i.fa.fa-2x.fa-vimeo
       .separator30.tablet.mobile
   .separator15
-  .line.line-footer.center-content-tablet
-    .col5.line-tablet
-      .col5.line-tablet.color-white
-        .separator30
-        %h3.color-muted-inverse La Scuola
-        %ul
-          .separator10
-          %li
-            %a.color-white.toggle-opacity-hover{:href => "#"} Accademia
-          .separator10
-          %li
-            %a.color-white.toggle-opacity-hover{:href => "#"} Dove Siamo
-          .separator10
-          %li
-            %a.color-white.toggle-opacity-hover{:href => "#"} Contatti
-          .separator10
-          %li
-            %a.color-white.toggle-opacity-hover{:href => "#"} Privacy Policy
-          .separator10
-          %li
-            %a.color-white.toggle-opacity-hover{:href => "#"} Utilizzo dei Cookies
-      .col5.line-tablet.color-white
-        .separator30
-        %h3.color-muted-inverse Opportunità
-        %ul
-          .separator10
-          %li
-            %a.color-white.toggle-opacity-hover{:href => "#"} Borse di studio
-          .separator10
-          %li
-            %a.color-white.toggle-opacity-hover{:href => "#"} Open Day!
-    .col5.line-tablet.line-tablet
-      .col5.line-tablet.color-white
-        .separator30
-        %h3.color-muted-inverse Per le aziende
-        %ul
-          .separator10
-          %li
-            %a.color-white.toggle-opacity-hover{:href => "#"} Partnership
-          .separator10
-          %li
-            %a.color-white.toggle-opacity-hover{:href => "#"} Offerte di lavoro
-      .col5.line-tablet.color-white
-        .separator30
-        %h3.color-muted-inverse Corsi e Master
-        %ul
-          .separator10
-          %li
-            %a.color-white.toggle-opacity-hover{:href => "#"} Corsi annuali
-          .separator10
-          %li
-            %a.color-white.toggle-opacity-hover{:href => "#"} Master
-          .separator10
-          %li
-            %a.color-white.toggle-opacity-hover{:href => "#"} Corsi brevi e serali
-    .separator100
-    .color-muted-inverse.font-smaller.center-content © 2015 Accademia Cappiello - Firenze
-    .separator50
+  .separator10
+  .line.line-compress.center-content-tablet.bg-black-more
+    .line-footer
+      .col5.line-tablet
+        .col5.line-tablet.color-white
+          .separator30
+          %h3.color-muted-inverse La Scuola
+          %ul
+            .separator10
+            %li
+              %a.color-white.toggle-opacity-hover{:href => "#"} Accademia
+            .separator10
+            %li
+              %a.color-white.toggle-opacity-hover{:href => "#"} Dove Siamo
+            .separator10
+            %li
+              %a.color-white.toggle-opacity-hover{:href => "#"} Contatti
+            .separator10
+            %li
+              %a.color-white.toggle-opacity-hover{:href => "#"} Privacy Policy
+            .separator10
+            %li
+              %a.color-white.toggle-opacity-hover{:href => "#"} Utilizzo dei Cookies
+        .col5.line-tablet.color-white
+          .separator30
+          %h3.color-muted-inverse Opportunità
+          %ul
+            .separator10
+            %li
+              %a.color-white.toggle-opacity-hover{:href => "#"} Borse di studio
+            .separator10
+            %li
+              %a.color-white.toggle-opacity-hover{:href => "#"} Open Day!
+      .col5.line-tablet.line-tablet
+        .col5.line-tablet.color-white
+          .separator30
+          %h3.color-muted-inverse Per le aziende
+          %ul
+            .separator10
+            %li
+              %a.color-white.toggle-opacity-hover{:href => "#"} Partnership
+            .separator10
+            %li
+              %a.color-white.toggle-opacity-hover{:href => "#"} Offerte di lavoro
+        .col5.line-tablet.color-white
+          .separator30
+          %h3.color-muted-inverse Corsi e Master
+          %ul
+            .separator10
+            %li
+              %a.color-white.toggle-opacity-hover{:href => "#"} Corsi annuali
+            .separator10
+            %li
+              %a.color-white.toggle-opacity-hover{:href => "#"} Master
+            .separator10
+            %li
+              %a.color-white.toggle-opacity-hover{:href => "#"} Corsi brevi e serali
+      .separator100
+      .color-muted-inverse.font-smaller.center-content © 2015 Accademia Cappiello - Firenze
+      .separator50
