--- a/public/stylesheets/main_responsive.css
+++ b/public/stylesheets/main_responsive.css
@@ -64,7 +64,6 @@ font-size: 12px; }
 .footer{
   background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAkAAAAJCAYAAADgkQYQAAAANklEQVQYV2NkIAzSGAmoSQPKz8KnCKwAZAguRXAFuBShKMCmCEMBuiKsCpAV4VQAU4RXAUgRAA8vCHD9SWoyAAAAAElFTkSuQmCC') ;
   background-color: #222;
-
 }
 .footer ul li {
 margin-top: 6px; }
@@ -209,6 +208,7 @@ float: none;
 margin: 0 auto; }
 .line-footer{
   max-width: 1100px;
+  width:96%;
 }
 .widget {
 width: 31.33%;
